# grpo-small-reasoner

./: CITATION.cff  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/_report/: research_report.md
docs/test_results/: coverage_summary.txt  pytest_output.txt
src/grpo/: __init__.py  runner.py  types.py
src/grpo/cli/: main.py
src/grpo/env/: tasks.py
src/grpo/policy/: sim.py
src/grpo/train/: loop.py
src/grpo/viz/: charts.py
tests/: test_policy.py  test_runner.py  test_train.py
