[project]
name = "grpo-small-reasoner"
version = "0.3.0"
description = "Small-scale GRPO training loop on toy math/logic tasks with reward-vs-step plots and pass@k curves"
requires-python = ">=3.11"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Akshitha Reddy Lingampally" }]
dependencies = [
    "numpy>=1.26",
    "matplotlib>=3.8",
    "typer>=0.9",
    "rich>=13.7",
    "pydantic>=2.5",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "ruff>=0.4",
    "mypy>=1.8",
]

[project.scripts]
grpo = "grpo.cli.main:app"

[tool.hatch.build.targets.wheel]
packages = ["src/grpo"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM", "RUF", "TID", "PT"]
ignore = ["B008"]

[tool.mypy]
strict = true
python_version = "3.11"
plugins = ["pydantic.mypy"]

[tool.pytest.ini_options]
addopts = "-ra --strict-markers"
testpaths = ["tests"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
